# iphone-dataprotection

./: CREDITS.txt  README.md  README.txt  boot.bat  boot.py  build.py  build_ramdisk.sh  build_ramdisk_v2.sh  build_tools.sh  build_tools.sh.original  dump_data_partition.sh  tcprelay.bat  tcprelay.sh
data/: libncurses.5.dylib
old/emf_decrypter/: CMakeLists.txt  README.txt
old/emf_decrypter/emf/: CMakeLists.txt  emf.h  emf_decrypter.c  emf_init.c
old/emf_decrypter/hfs/: xattr.c
old/img3fs/: Makefile  README  img3fs.c
python_scripts/: README.txt  backup_passwd.py  backup_tool.py  demo_backup_keychain.py  demo_bruteforce.py  demo_escrow.py  emf_decrypter.py  emf_undelete.py  ios_examiner.py  kernel_patcher.py  keychain_tool.py  windows_redsn0w_keys.py  wordlist.dict
python_scripts/backups/: backup10.py  backup3.py  backup4.py
python_scripts/firmware/: img2.py  img3.py  scfg.py
python_scripts/hfs/: btree.py  emf.py  fastunicode.py  hfs.py  journal.py  structs.py
python_scripts/icloud/: backup.py
python_scripts/keychain/: __init__.py  keychain.py  keychain3.py  keychain4.py  (+2 more)
ramdisk_tools/: AppleEffaceableStorage.c  AppleEffaceableStorage.h  AppleKeyStore.c  AppleKeyStore.h  AppleKeyStore_kdf.c  IOAESAccelerator.c  IOAESAccelerator.h  IOKit.c  IOKit.h  IOUSBDeviceControllerLib.h  Makefile  device_info.c  device_info.h  device_infos.c  entitlements.plist  kernel_patcher.c  plist_server.c  plist_server.h  registry.c  registry.h  remote_functions.c  remote_functions.h  restored_external.c  shsh_dump.c  systemkb_bruteforce.c  ttbthingy.c  util.c  util.h
(+31 files in other folders)
